--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         コマンドの組み込みやテストを実施。<br>
     テストではテストケースの作成から経験。</p>
 
-    <p>＜2019～＞VMwareを使った仮想マシンの作成、運用、保守を実施し、<br>
-    VBAを使ってデータ加工のツールを作成したり、仮想マシンの操作手順書を作成。<br>
-また、GDMSでフォルダ管理者を経験し、顧客の要望通りのフォルダ構成を作成。</p>
+    <p>＜2019～＞VMwareを使った仮想マシンの作成、<br>運用/保守を実施し、
+    VBAを使ってデータ加工のツールを作成したり、<br>仮想マシンの操作手順書を作成。
+また、GDMSでフォルダ管理者を経験し、<br>顧客の要望通りのフォルダ構成を作成。</p>
 <img class="skill" src="skill.jpg" alt="skill">
     <h1>転職理由</h1>
     <p>他部署の自社ホームページ作成を手伝うことがあり、自分で作成したモノが<br>
