--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     テストではテストケースの作成から経験。</p>
 
     <p>＜2019～＞VMwareを使った仮想マシンの作成、<br>運用/保守を実施し、
-    VBAを使ってデータ加工のツールを作成したり、<br>仮想マシンの操作手順書を作成。
+    VBAを使ってデータ加工のツールを<br>作成したり仮想マシンの操作手順書を作成。<br>
 また、GDMSでフォルダ管理者を経験し、<br>顧客の要望通りのフォルダ構成を作成。</p>
 <img class="skill" src="skill.jpg" alt="skill">
     <h1>転職理由</h1>
